<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.skyworthclub.jigsawgame.JigsawActivity">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/difficulty"/>

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/choose_difficulty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/time"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/stepNumber"/>

        <TextView
            android:id="@+id/stepNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/original_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/original_img"
            android:background="@drawable/white_button"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reset"
            android:background="@drawable/white_button"/>

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/back"
            android:background="@drawable/white_button"/>
    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:horizontalSpacing="4px"
        android:verticalSpacing="4px"
        android:layout_below="@id/linear_layout1"
        android:layout_above="@id/linear_layout2"
        android:layout_centerInParent="true">

    </GridView>

</RelativeLayout>
